LinKreta_POC_Repository/force-app/main/default/objects/User/fields/AD_USERNAME__c.field-meta.xml
<CustomField>
    <fullName>AD_USERNAME__c</fullName>
    <label>AD User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>