LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Also_a_Job_Manager__c.field-meta.xml
<CustomField>
    <fullName>Also_a_Job_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Job Manager Filter on Job Record</description>
    <label>Also a Job Manager</label>
    <type>Checkbox</type>
</CustomField>