LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <label>Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P-1</fullName>
            </value>
            <value>
                <fullName>P-2+</fullName>
            </value>
            <value>
                <fullName>ED</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>