LinKreta_POC_Repository/force-app/main/default/objects/User/fields/COMMON_USER__c.field-meta.xml
<CustomField>
    <fullName>COMMON_USER__c</fullName>
    <label>COMMON_USER</label>
    <length>25</length>
    <type>Text</type>
</CustomField>