LinKreta_POC_Repository/force-app/main/default/objects/User/fields/COMP_ID__c.field-meta.xml
<CustomField>
    <fullName>COMP_ID__c</fullName>
    <label>Employee Entity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>