LinKreta_POC_Repository/force-app/main/default/objects/User/fields/CR_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>CR_USER_ID__c</fullName>
    <label>CR_USER_ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>