LinKreta_POC_Repository/force-app/main/default/objects/User/fields/DEL_DATE__c.field-meta.xml
<CustomField>
    <fullName>DEL_DATE__c</fullName>
    <label>Delete Date</label>
    <type>Date</type>
</CustomField>