LinKreta_POC_Repository/force-app/main/default/objects/User/fields/DEL_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>DEL_USER_ID__c</fullName>
    <label>Delete By User Id</label>
    <relationshipName>DeletedBy</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>