LinKreta_POC_Repository/force-app/main/default/objects/User/fields/EMP_Code_Email__c.field-meta.xml
<CustomField>
    <fullName>EMP_Code_Email__c</fullName>
    <description>In the Working Committee meeting on 26th April 2023, it was decided that in light of the fact that SFDC does not allow any customization to the Approval object (ProcessInstanceWorkitem) and therefore will not allow for the Reassign button to be removed or inactivated, we created this formula field and added it to the Search Layout in 2nd position.</description>
    <formula>EMP_MID__c + &quot; | &quot; +  Email</formula>
    <label>EMP Code &amp; Email</label>
    <type>Text</type>
</CustomField>