LinKreta_POC_Repository/force-app/main/default/objects/User/fields/EMP_FNAME__c.field-meta.xml
<CustomField>
    <fullName>EMP_FNAME__c</fullName>
    <label>EMP_FNAME</label>
    <length>25</length>
    <type>Text</type>
</CustomField>