LinKreta_POC_Repository/force-app/main/default/objects/User/fields/EMP_ID__c.field-meta.xml
<CustomField>
    <fullName>EMP_ID__c</fullName>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>