LinKreta_POC_Repository/force-app/main/default/objects/User/fields/EMP_LNAME__c.field-meta.xml
<CustomField>
    <fullName>EMP_LNAME__c</fullName>
    <label>EMP_LNAME</label>
    <length>25</length>
    <type>Text</type>
</CustomField>