LinKreta_POC_Repository/force-app/main/default/objects/User/fields/EMP_MID__c.field-meta.xml
<CustomField>
    <fullName>EMP_MID__c</fullName>
    <label>Employee Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>