LinKreta_POC_Repository/force-app/main/default/objects/User/fields/EMP_MNAME__c.field-meta.xml
<CustomField>
    <fullName>EMP_MNAME__c</fullName>
    <label>EMP_MNAME</label>
    <length>25</length>
    <type>Text</type>
</CustomField>