LinKreta_POC_Repository/force-app/main/default/objects/User/fields/EMP_NAME__c.field-meta.xml
<CustomField>
    <fullName>EMP_NAME__c</fullName>
    <label>EMP_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>