LinKreta_POC_Repository/force-app/main/default/objects/User/fields/EMP_Tier__c.field-meta.xml
<CustomField>
    <fullName>EMP_Tier__c</fullName>
    <label>Employee Tier</label>
    <length>6</length>
    <type>Text</type>
</CustomField>