LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <label>Employee Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>