LinKreta_POC_Repository/force-app/main/default/objects/User/fields/EMPLOYEECATEGORYID__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEECATEGORYID__c</fullName>
    <label>Employee Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>