LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <label>Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>