LinKreta_POC_Repository/force-app/main/default/objects/User/fields/GRP_COMP_ID__c.field-meta.xml
<CustomField>
    <fullName>GRP_COMP_ID__c</fullName>
    <label>Company Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>