LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Internal_Service_Unit__c.field-meta.xml
<CustomField>
    <fullName>Internal_Service_Unit__c</fullName>
    <label>Employee ISU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>