LinKreta_POC_Repository/force-app/main/default/objects/User/fields/IntroHive__Introductions_Accepted__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Introductions_Accepted__c</fullName>
    <description>The number of the user&apos;s introduction requests that have been accepted.</description>
    <label>Introductions Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>