LinKreta_POC_Repository/force-app/main/default/objects/User/fields/IntroHive__Introductions_Declined__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Introductions_Declined__c</fullName>
    <description>The number of introduction requests that have been declined.</description>
    <label>Introductions Declined</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>