LinKreta_POC_Repository/force-app/main/default/objects/User/fields/IntroHive__Introductions_Sent__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Introductions_Sent__c</fullName>
    <description>The number of introduction requests sent.</description>
    <label>Introduction Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>