LinKreta_POC_Repository/force-app/main/default/objects/User/fields/IntroHive__Relationship_Capital_Score__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Relationship_Capital_Score__c</fullName>
    <description>The user&apos;s Introhive Relationship Capital score.  This is an indicator of how connected a user is based on their contacts and communications with those contacts.</description>
    <label>Introhive Relationship Capital Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>