LinKreta_POC_Repository/force-app/main/default/objects/User/fields/IS_DELETED__c.field-meta.xml
<CustomField>
    <fullName>IS_DELETED__c</fullName>
    <label>IS_DELETED</label>
    <length>4</length>
    <type>Text</type>
</CustomField>