LinKreta_POC_Repository/force-app/main/default/objects/User/fields/IsAnExecutiveAdminEA__c.field-meta.xml
<CustomField>
    <fullName>IsAnExecutiveAdminEA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is an Executive Admin (EA)?</label>
    <type>Checkbox</type>
</CustomField>