LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Last_Designation_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Designation_Till_Date__c</fullName>
    <label>Last Designation Till Date</label>
    <type>Date</type>
</CustomField>