LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Base Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>