LinKreta_POC_Repository/force-app/main/default/objects/User/fields/MOBILE_ACCESS__c.field-meta.xml
<CustomField>
    <fullName>MOBILE_ACCESS__c</fullName>
    <label>MOBILE_ACCESS</label>
    <length>25</length>
    <type>Text</type>
</CustomField>