LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Partner_Login_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Partner_Login_User_Profile__c</fullName>
    <formula>IF
(
NOT(ISBLANK(PartnerLogin_UserID__c)),
PartnerLogin_UserID__r.Profile.Name ,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Login - User Profile</label>
    <type>Text</type>
</CustomField>