LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Partner_Login_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Partner_Login_User_Role__c</fullName>
    <formula>IF
(
NOT(ISBLANK(PartnerLogin_UserID__c)),
PartnerLogin_UserID__r.UserRole.Name ,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Login - User Role</label>
    <type>Text</type>
</CustomField>