LinKreta_POC_Repository/force-app/main/default/objects/User/fields/PartnerLogin_LastLoginDateTime__c.field-meta.xml
<CustomField>
    <fullName>PartnerLogin_LastLoginDateTime__c</fullName>
    <description>This field has been created as part of the LinKreta initiative and is a part of the function to support an EA to login as a Partner. This field is used to capture the Login Date/Time when an EA logged in as a Partner User.</description>
    <label>Partner Login - Last Login Date/Time</label>
    <type>DateTime</type>
</CustomField>