LinKreta_POC_Repository/force-app/main/default/objects/User/fields/PartnerLogin_UserFullName__c.field-meta.xml
<CustomField>
    <fullName>PartnerLogin_UserFullName__c</fullName>
    <description>This field has been created as part of the LinKreta initiative and is a part of the function to support an EA to login as a Partner. This formula represents the Full Name of the Partner User an EA has logged in as.</description>
    <formula>IF
(
NOT(ISBLANK(PartnerLogin_UserID__c)),
PartnerLogin_UserID__r.FirstName + &quot; &quot; + PartnerLogin_UserID__r.LastName,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Login - User Full Name</label>
    <type>Text</type>
</CustomField>