LinKreta_POC_Repository/force-app/main/default/objects/User/fields/PartnerLogin_UserID__c.field-meta.xml
<CustomField>
    <fullName>PartnerLogin_UserID__c</fullName>
    <description>This field has been created as part of the LinKreta initiative and is a part of the function to support an EA to login as a Partner. This field is used to capture the Partner User that an EA has logged in as.</description>
    <label>Partner Login - User ID</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select a Standard User which is Active</errorMessage>
        <filterItems>
            <field>$Source.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <filterItems>
            <field>$Source.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <relationshipName>EAPartnerLogin_User</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>