LinKreta_POC_Repository/force-app/main/default/objects/User/fields/PartnerLogin_UserName__c.field-meta.xml
<CustomField>
    <fullName>PartnerLogin_UserName__c</fullName>
    <description>This field has been created as part of the LinKreta initiative and is a part of the function to support an EA to login as a Partner. This formula represents the Username of the Partner User an EA has logged in as.</description>
    <formula>IF
(
NOT(ISBLANK(PartnerLogin_UserID__c)),
PartnerLogin_UserID__r.Username,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Login - User Name</label>
    <type>Text</type>
</CustomField>