LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Previous_Band__c.field-meta.xml
<CustomField>
    <fullName>Previous_Band__c</fullName>
    <label>Previous Band</label>
    <length>255</length>
    <type>Text</type>
</CustomField>