LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Previous_Designation__c.field-meta.xml
<CustomField>
    <fullName>Previous_Designation__c</fullName>
    <label>Previous Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>