LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Previous_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Previous_Expertise__c</fullName>
    <label>Previous Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>