LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Resignation_LWD__c.field-meta.xml
<CustomField>
    <fullName>Resignation_LWD__c</fullName>
    <label>Last Working Date</label>
    <type>Date</type>
</CustomField>