LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <formula>FederationIdentifier =  Email</formula>
    <label>Sample</label>
    <type>Checkbox</type>
</CustomField>