LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Employee Expertise</label>
    <length>100</length>
    <type>Text</type>
</CustomField>