LinKreta_POC_Repository/force-app/main/default/objects/User/fields/Successor_User__c.field-meta.xml
<CustomField>
    <fullName>Successor_User__c</fullName>
    <label>Successor User</label>
    <relationshipName>Successor_User</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>