LinKreta_POC_Repository/force-app/main/default/objects/User/fields/USER_DESG__c.field-meta.xml
<CustomField>
    <fullName>USER_DESG__c</fullName>
    <label>USER_DESG</label>
    <length>24</length>
    <type>Text</type>
</CustomField>