LinKreta_POC_Repository/force-app/main/default/objects/User/fields/USER_ID__c.field-meta.xml
<CustomField>
    <fullName>USER_ID__c</fullName>
    <externalId>true</externalId>
    <label>WCGT User ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>