LinKreta_POC_Repository/force-app/main/default/objects/User/fields/User_Lock__c.field-meta.xml
<CustomField>
    <fullName>User_Lock__c</fullName>
    <label>User Lock</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>