LinKreta_POC_Repository/force-app/main/default/objects/User/fields/USER_NAME__c.field-meta.xml
<CustomField>
    <fullName>USER_NAME__c</fullName>
    <label>WCGT User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>