LinKreta_POC_Repository/force-app/main/default/objects/User/fields/zoom_app__Disable_Invitation_Email__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Disable_Invitation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>user level to disable invitation email,this option is subject to org level setting</inlineHelpText>
    <label>Disable Invitation Email</label>
    <type>Checkbox</type>
</CustomField>