LinKreta_POC_Repository/force-app/main/default/objects/User/fields/zoom_app__isPMI_Enabled__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__isPMI_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable it if you want to use your Zoom PMI for creating instant meetings.</inlineHelpText>
    <label>PMI Enabled For Scheduled Meeting</label>
    <type>Checkbox</type>
</CustomField>