LinKreta_POC_Repository/force-app/main/default/objects/User/fields/zoom_app__Send_Email_to_Attendee__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Send_Email_to_Attendee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Provides an interface to send email to attendees while Launching Zoom Meeting from Start Zoom Meeting button.</inlineHelpText>
    <label>Send Email to Attendees at Launch</label>
    <type>Checkbox</type>
</CustomField>